Rewrite README to build and deploy PRIS