@@ -1,21 +1,83 @@
+
 # OpenNMS Provisioning Integration Server
-The provisioning integration server (pris) is a software which provides the ability to get external information from your inventory into an OpenNMS requisition model. The output from pris is provided as XML over HTTP and can be used in OpenNMS Provisiond to import and discover nodes from.
 
-The project is divided in three modules:
+The _Provisioning Integration Server (pris)_ is a tool which provides the ability to get external information from your inventory into an OpenNMS requisition model.
+The output from pris is provided as XML over HTTP and can be used in OpenNMS Provisiond to import and discover nodes from.
+This tool can be used to normalize inventory data and gives the ability to cleanup and manipulate the information before uploading into OpenNMS.
 
-* `parent` module ties documentation and the server itself together. Maintains also version numbers
-* `opennms-pris` is the server code itself.
-* `opennms-pris-docs` the documentation for the software and sources
+The project is divided in the following Maven modules:
 
-The documentation will be automatically build from Markdown to HTML and you can browse the docs in the target directory.
+* `parent` This module ties all components together 
+* `opennms-pris-api` generic programming interfaces for configuration, mapper and different data sources
+* `opennms-pris-dist` module to assemble the compiled code into a runnable and distributable format
+* `opennms-pris-docs` documentation of the application for user and developers 
+* `opennms-pris-main` provisioning integration server itself
+* `opennms-pris-model` The OpenNMS requisition model
+* `opennms-pris-plugins` plugins which implement specific data sources such as XLS, scripts, JDBC or OCS Inventory
 
-* Example configuration and init script `opennms-pris/src/examples`
-* Recommended install path `/opt/opennms-pris`
-* http://www.opennms.org/wiki/OCS_Integration
-* http://docs.opennms.org/pris/
+## Resources
 
-# Compiling from source
-This guide describes how you can checkout the source code from GitHub and how you can compile from source. The following parts are required:
+* CI/CD Status: [![CircleCI](https://circleci.com/gh/indigo423/opennms-provisioning-integration-server.svg?style=svg)](https://circleci.com/gh/indigo423/opennms-provisioning-integration-server)
+* CI/CD System: [CircleCI]
+* DockerHub: [PRIS on DockerHub]
+* Issue- and Bug-Tracking: [PRIS Project in OpenNMS JIRA]
+* Source code: [GitHub]
+* Chat: [IRC] or [Web Chat]
+
+## Run PRIS as a Docker Container
+
+Current releases of PRIS are published on [DockerHub].
+You can download and start the container image with:
+
+    docker run --name mypris --detach --publish 8000:8000 opennms/pris:latest
+
+The container will be downloaded from DockerHub and is started in background with name `mypris`.
+A port 8000 is published on your local machine which can be used with your browser.
+The unique container is returned which identifies the running instance of your container.
+
+If you want to embed your PRIS service in an existing Docker Compose service stack:
+
+```
+version: '2.3'
+
+volumes:
+  pris.data:
+    driver: local
+
+services:
+  pris:
+    container_name: opennms.pris
+    image: opennms/pris:latest
+    environment:
+      - TZ=Europe/Berlin
+      - JAVA_OPTS=-XX:+PrintGCDetails
+    volumes:
+      - pris.data:/opt/opennms-pris/requisitions
+      - pris.data:/opt/opennms-pris/scriptsteps
+    healthcheck:
+      test: ["CMD", "curl", "-f", "-I", "http://localhost:8000/documentation/index.html"]
+      interval: 30s
+      timeout: 5s
+      retries: 1
+    ports:
+      - "8000:8000"
+```   
+
+Your configuration for data sources is persisted to a named volume.
+Mount a local volume if you want to use scripts and requisition source configuration from your local system.
+
+To add JMX monitoring you can add Java options as environment variable like:
+
+```
+- JAVA_OPTS=-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.port=19110 -Dcom.sun.management.jmxremote.rmi.port=19111 -Dcom.sun.management.jmxremote.local.only=false -Djava.rmi.server.hostname=<my-docker-host-ip>
+```
+
+As `-Djava.rmi.server.hostname` you have to take the IP address of your Docker Host machine and make sure you expose both RMI ports in `-Dcom.sun.management.jmxremote.port=19110` and `-Dcom.sun.management.jmxremote.rmi.port=19111`.
+
+# Compile and Install PRIS from source
+
+This guide describes how you can checkout the source code from GitHub and how you can compile from source.
+The following parts are required: 
 
 * [OpenJDK] or [Oracle Java Development Kit] with javac Version 8
 * Apache [Maven]
@@ -27,50 +89,83 @@ In your source directory run the command
 
     mvn clean package
 
-It make sure everything from previous builds is cleand away. Then is compiles the code and build everything as a runnable jar in target directories.
+It make sure everything from previous builds is cleaned away.
+Then is compiles the code and build everything as a runnable jar as well as .tar.gz and .zip file in the `opennms-pris-dist/target` directory.
 
-Configuration examples for different integration sources can be found in `src/examples`. If you want to use `opennms-pris` with HTTP as background daemon, you can find also an `init script` in the `src/examples` folder.  
+The PRIS server is started in foreground with the following command executed in your PRIS directory:
 
-# Structure of the git repository
-Check out the source code from [GitHub] with the following command:
+    java -cp ./lib/*:./opennms-pris.jar org.opennms.pris.Starter 
 
-    git clone https://github.com/OpenNMS/opennms-provisioning-integration-server.git
+Connect your browser to http://localhost:8000, if you don't point to any requisition from a source, you will be redirected to the documentation page.
+The example requisition from a provided Excel sheet can be accessed with http://localhost:8000/requisitions/myServer and http://localhost:8000/requisitions/myRouter.
 
-You have several branches you can build now. The master branch is the latest functional release. The stable releases are tagged. To show specific releases change in to the source directory and use the command
+## Build a Docker Container Image
 
-    git tag -l
+You can build a Docker Container Image by using the provided `Docker/Dockerfile`.
 
-It will give you a list of all tagged releases. There are several other branches which follow the [nvie] branch pattern and has the following naming convention
+### Step 0:
 
-* `master` a production-ready state
-* `release-*` a stable release
-* `hotfix-*` fix for bugs
-* `feature-*` enhance the software with a new feature
-* `develop` reflects a state with the latest delivered development changes for the next release.
+Checkout the source code repository to a subdirectory name `pris` and change into the directory
 
-You can get special branches with the command
+```
+git clone https://github.com/OpenNMS/opennms-provisioning-integration-server.git pris
+cd pris
+```
 
-    git checkout -b feature-vmware-source origin/feature-vmware-source
+### Step 1:
 
-If you want to get a special tagged version you can use the command
+Compile and assemble the source code to get the distributable tar.gz file
 
-    git checkout
-    git checkout tags/<tag_name>
+```
+mvn clean package
+```
 
-It will switch your source to the given tagged version.
+### Step 2:
+
+Build the image with the command:
+
+```
+cp opennms-pris-dist/target/pris-release-archive.tar.gz Docker/deploy
+docker build -t mypris .
+```
+
+### Step 3:
+
+Run the build container image with
+
+```
+docker run --name mypris --detach --publish 8000:8000 mypris
+```
+
+# Development and Releases
+
+There are several other branches with the following naming convention:
+
+* `master` branch for next release, tagged as `bleeding` on [DockerHub]
+* `release-*` a specific stable release, tagged as `latest` and with specific version number from `git describe` as history on [DockerHub]
+
+The branches above will be automatically published to [DockerHub].
+All other branches are just built and tested.
+You can download build artifacts like Docker images from your branch from [CircleCI].
+
+The CI/CD workflows can be found in the `.circleci` directory.
 
 # General information
-We don't use the issue tracking from GitHub, we use the main OpenNMS project issue tracker instead, cause this part is developed within the OpenNMS Project.
 
-* Issues: http://issues.opennms.org/browse/PRIS
-* IRC: irc://freenode.org/#opennms
+* Maintainer: ronny@opennms.org
 * License: GPLv3
 * Illustrations created with [yED]
 
 [GitHub]: https://github.com/OpenNMS/opennms-provisioning-integration-server.git
+[DockerHub]: https://hub.docker.com/r/opennms/pris
 [OpenJDK]: http://openjdk.java.net/
 [Oracle Java Development Kit]: http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html
 [Maven]: http://maven.apache.org/
 [git-scm]: http://git-scm.com/
 [nvie]: http://nvie.com/posts/a-successful-git-branching-model/
 [yED]: http://www.yworks.com/en/products_yed_about.html
+[PRIS on DockerHub]: https://hub.docker.com/r/opennms/pris
+[PRIS Project in OpenNMS JIRA]: https://issues.opennms.org/projects/PRIS
+[CircleCI]: https://circleci.com/gh/indigo423/opennms-provisioning-integration-server
+[Web Chat]: https://chats.opennms.org/opennms-discuss
+[IRC]: irc://freenode.org/#opennms 
